initial stage file

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://vdharmendra.github.io/DarkLight-Toggle-Smooth-Dark-Mode-Theme-Switcher-ReactJs-DarkMode-React.js-Project/",
   "name": "darkmode",
   "version": "0.1.0",
   "private": true,
